--- a/timer/index.html
+++ b/timer/index.html
@@ -5,19 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>timer</title>
 </head>
 
 <body>
-  <input type="number" id="minute" />
-  <input type="number" id="second" />
-  <button id="start">Start Timer</button>
-  <button id="stop">Stop Timer</button>
-  <button id="reset">Reset Timer</button>
-  <p id="display">
-    <span id="mm">00</span> :
-    <span id="ss">00</span>
-  </p>
+  <div>
+    <p id="display">
+      <span contenteditable="true" id="mm">00</span> :
+      <span contenteditable="true" id="ss">00</span>
+    </p>
+    <button id="start">Start Timer</button>
+    <button id="stop">Stop Timer</button>
+    <button id="reset">Reset Timer</button>
+  </div>
   <script src="script.js"></script>
 </body>
 
