--- a/timer/index.html
+++ b/timer/index.html
@@ -15,9 +15,9 @@
       <span contenteditable="true" id="mm">00</span> :
       <span contenteditable="true" id="ss">00</span>
     </p>
-    <button id="start">Start Timer</button>
-    <button id="stop">Stop Timer</button>
-    <button id="reset">Reset Timer</button>
+    <button id="start">Start</button>
+    <button id="stop">Stop</button>
+    <button id="reset">Reset</button>
   </div>
   <script src="script.js"></script>
 </body>
