before/after, bars

--- a/timer/index.html
+++ b/timer/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div>
+  <div id="container">
     <p id="display">
       <span contenteditable="true" id="mm">00</span> :
       <span contenteditable="true" id="ss">00</span>
@@ -19,6 +19,8 @@
     <button id="stop">Stop</button>
     <button id="reset">Reset</button>
   </div>
+  <div id="ssbar"></div>
+  <div id="mmbar"></div>
   <script src="script.js"></script>
 </body>
 
